<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home"
            ></item>

        <item
            android:id="@+id/nav_list_branch"
            android:icon="@drawable/mini_car_icon"
            android:title="Our Branches"
            />
        <item android:id="@+id/nav_display_free_car"
            android:icon="@drawable/ninja"
            android:title="Our Cars"
            >

        </item>

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/log_out" />




    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/email_us" />
            <item
                android:id="@+id/nav_webpage"
                android:icon="@drawable/webpage"
                android:title="@string/webpage" />
            <item
                android:id="@+id/nav_phone"
                android:icon="@drawable/ic_phone"
                android:title="@string/phone_us" />
        </menu>
    </item>

</menu>
