<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ephraimhammer.jct.customercarrental.control.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/button_free_cars_by_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_cars_per_branch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_free_cars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_branches_per_model"
        app:layout_constraintEnd_toEndOf="@+id/button_free_cars_by_branch"
        app:layout_constraintStart_toStartOf="@+id/button_free_cars_by_branch"
        app:layout_constraintTop_toBottomOf="@+id/button_free_cars_by_branch" />

    <Button
        android:id="@+id/button_free_cars_by_rangeKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/free_used_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_free_cars"
        app:layout_constraintTop_toBottomOf="@+id/button_free_cars" />
</android.support.constraint.ConstraintLayout>
