<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="16dp"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_b"
        android:orientation="vertical"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/closeBranchButton"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:gravity="left|top"
                android:background="@drawable/mr_dialog_close_light" />

            <TextView
                android:id="@+id/detailBranchNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:layout_weight="1"
                android:gravity="center"
                tool:text="NAMEBRANCHE" />

            <TextView
                android:id="@+id/mapTxtView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|bottom"
                android:paddingRight="5dp"
                android:text="  maps  "
                android:textColor="#3275b4"
                android:textSize="12dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_city" />

            <TextView
                android:id="@+id/textView_branch_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_street" />

            <TextView
                android:id="@+id/textView_branch_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_street_number" />

            <TextView
                android:id="@+id/textView_branch_street_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Parking Place" />

            <TextView
                android:id="@+id/textView_amount_parking_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>


    </LinearLayout>











</LinearLayout>